--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
       <div class="jumbotron Background">
         <div class="jumboCopy">
-          <h1 class="display-4"><b>Plate Case Study</b></h1>
+          <h1 class="display-4" style="font-size: 100px;"><b>Perfect Plate Case Study</b></h1>
         </div>
       </div>
 
